2001-06-24  H.J. Lu  <hjl@gnu.org>

	* objcopy.c (strip_main): Revert the change made on 2001-05-30
	by accident.
	(copy_main): Apply the the change made to strip_main on
	2001-05-30 by accident.

2001-06-23  Andreas Jaeger  <aj@suse.de>

	* unwind-ia64.c (unw_decode_x1): Add unused attribute for
	parameter 'code'.
	(unw_decode_x2): Likewise.
	(unw_decode_x3): Likewise.
	(unw_decode_x4): Likewise.

2001-06-23  Ben Elliston  <bje@redhat.com>

	* MAINTAINERS: Add myself as M88k maintainer.

2001-06-22  Jocelyn Mayer  <jocelyn.mayer@netgem.com>

	* objcopy.c (strip_main): Support -o or --output-file command lien
	switch.

2001-06-19  H.J. Lu <hjl@gnu.org>

	* doc/Makefile.in: Regenerated.

2001-06-19  Nick Clifton  <nickc@cambridge.redhat.com>

	* readelf.c: Restore formatting.

2001-06-18  H.J. Lu <hjl@gnu.org> & Nick Clifton <nickc@redhat.com>

        * Makefile.am: Move documentation into doc subdirectory.
        * Makefile.in: Regenerated.
	* binutils.texi: Move into doc subdirectory.
        * addr2line.1: Removed.
        * ar.1: Likewise.
        * dlltool.1: Likewise.
        * nlmconv.1: Likewise.
        * nm.1: Likewise.
        * objcopy.1: Likewise.
        * objdump.1: Likewise.
        * ranlib.1: Likewise.
        * readelf.1: Likewise.
        * size.1: Likewise.
        * strings.1: Likewise.
        * strip.1: Likewise.
        * windres.1: Likewise.
        * cxxfilt.man: Likewise.
	* doc: New Directory.
	* doc/Makefile.am: New file.
	* doc/Makefile.in: Generate.

2001-06-09  Alan Modra  <amodra@bigpond.net.au>

	* NEWS: Fix a typo.  Mention hppa64-elf.  Add binutils-2.11 marker.

2001-06-01  Alan Modra  <amodra@bigpond.net.au>

	* MAINTAINERS: Update my email address.

2001-05-30  Honda Hiroki  <hhonda@kobe-catv.ne.jp>

	* objcopy.c: Add new switches: --keep-global-symbol,
	--keep-symbols, --localize-symbols, --keep-global-symbols and
	--weaken-symbols.
	* binutils.texi: Document new switches.
	* objcopy.1: Regenerate.